feat: Implement Module 2 - Async logging core and fix tests
- HighPerformanceFileLogBackend now uses ConcurrentLinkedQueue and ExecutorService
  for asynchronous LogEvent processing by a daemon consumer thread.
- Implemented basic LogEventConsumer to print events to console.
- Added Closeable to HighPerformanceFileLogBackend with shutdown logic.
- Updated ModuleOneTest to use recursive reflection for getLogBackend().
- Corrected deprecated Class.newInstance() calls in LogBackendType and LoggerFactory.